# caphim

./: .gitmodules  CMakeLists.txt  README.md  build-micropython.sh  micropython-gendiff.sh  prepare-micropython.sh
cpp/: CMakeLists.txt
cpp/src/capsens/: circular_cap.cpp  display_helper.h
micropython-mods/: capsens-adds.diff  capsens-mods.diff
pure-micropython-scripts/: capsens.py
src/: main.cpp
src/capsens/: capsens.pio  circular_cap.cpp  circular_cap.h  display_helper.cpp
src/sprite/: sprite.cpp
